WIP: stashing latest icon custom element work

--- a/src/_patterns/01-core/01-settings/settings-spacing/_settings.spacing.scss
+++ b/src/_patterns/01-core/01-settings/settings-spacing/_settings.spacing.scss
@@ -2,6 +2,7 @@
 /// @group Settings: Layout
 /// @author Mike Mai
 ////
+@import '@bolt/tools-export-data'; //So we can export spacing values to JSON
 
 /* ------------------------------------ *\
   Spacing Scale
@@ -16,7 +17,7 @@ $bolt-spacing-stretched: 1.5;
 /// Bolt's definition of spacing scale
 /// @type Map
 $bolt-spacing-values: (
-  '':        1,
+  // '':        1,
   'xxsmall': 0.125,
   'xsmall':  0.25,
   'small':   0.5,
@@ -25,6 +26,7 @@ $bolt-spacing-values: (
   'xlarge':  4,
   'xxlarge': 8
 );
+$bolt-spacing-values: bolt-export-data('spacing-scale.data.json', $bolt-spacing-values, $prefix: '{ "boltSpacingScale":', $suffix: '}');
 
 $bolt-spacing-sizes: ();
 
