--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -48,6 +48,11 @@ bolt-demo {
 }
 
 
+// @include bolt-register-element('bolt-card', 'block');
+
+// @debug $bolt-custom-elements;
+
+
 // // color map
 // $color: (
 //   text: #222,
