WIP: ordered list and unordered list fixes

--- a/src/_patterns/02-components/03-bolt-ordered-list/src/ordered-list.scss
+++ b/src/_patterns/02-components/03-bolt-ordered-list/src/ordered-list.scss
@@ -2,6 +2,8 @@
    Ordered List
 \* ------------------------------------ */
 
+/*@import '@bolt/settings-global'; // TODO: Comment out for now. Need to include only once.*/
+
 @import '@bolt/settings-colors';
 @import '@bolt/settings-font-size';
 @import '@bolt/settings-font-weight';
@@ -12,6 +14,11 @@
 
 
 $bolt-ordered-list-bullet-size: $bolt-line-height--xsmall + rem;
+$bolt-ordered-list-bullet-text-color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+$bolt-ordered-list-bullet-bg-color: rgba(bolt-color(gray), 0.2);
+
+
+@include bolt-register-element('bolt-ordered-list', 'block');
 
 
 .c-bolt-ordered-list {
@@ -19,7 +26,7 @@ $bolt-ordered-list-bullet-size: $bolt-line-height--xsmall + rem;
   @include bolt-padding(0);
 
   list-style: none;
-  counter-reset: li;
+  counter-reset: list-item;
 }
 
 .c-bolt-ordered-list__item {
@@ -27,24 +34,27 @@ $bolt-ordered-list-bullet-size: $bolt-line-height--xsmall + rem;
   @include bolt-padding(0);
 
   position: relative;
-  counter-increment: li;
+  counter-increment: list-item;
 
   &:before {
     @include bolt-font-size(xsmall);
     @include bolt-font-weight(bold);
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    display: block;
     position: absolute;
     top: 0.125em;
     left: bolt-spacing(medium) * -1;
     width: $bolt-ordered-list-bullet-size;
     height: $bolt-ordered-list-bullet-size;
-    content: counter(li);
-    color: var(--bolt-color-heading, bolt-color(indigo)); // TODO: refactor this after theming is done.
+    content: counter(list-item);
+    color: $bolt-ordered-list-bullet-text-color;
     text-align: center;
+    line-height: $bolt-ordered-list-bullet-size;
     border-radius: $bolt-ordered-list-bullet-size;
-    background-color: rgba(bolt-color(gray), 0.2);
+    background-color: $bolt-ordered-list-bullet-bg-color;
+  }
+
+  &:last-child {
+    @include bolt-margin-bottom(0);
   }
 }
