--- a/src/styles/bolt.scss
+++ b/src/styles/bolt.scss
@@ -10,26 +10,6 @@
 @import '@bolt/themes-all';
 @import '@bolt/utilities-all';
 
-// @import '@bolt/objects-grid';
-// @import '@bolt/objects-inline-list';
-// @import '@bolt/objects-island';
-// @import '@bolt/objects-ratio';
-// @import '@bolt/objects-ui-list';
-// @import '@bolt/objects-wrapper';
-
-
-
-
-// @import '../_patterns/01-core/01-settings/*';
-// @import '../_patterns/*/*-generic/*';
-// @import '../_patterns/*/*-elements/*';
-// @import '@bolt/settings-colors';
-// @import '@bolt/settings-font-family';
-// @import '@bolt/settings-font-size';
-// @import '@bolt/settings-font-weight';
-// @import '@bolt/settings-global';
-// @import '@bolt/settings-spacing';
-
 
 
 /* ------------------------------------ *\
@@ -46,6 +26,49 @@ bolt-demo {
   @include bolt-padding(medium);
   display: block;
 }
+
+
+/* ------------------------------------ *\
+   Custom elements
+\* ------------------------------------ */
+
+// Post-processing after all custom elements have been added.
+// @TODO: figure out how best to collect these dynamically but still add to the generic layer when we need these to be included.
+@each $bolt-custom-element-item in $_bolt-custom-block-elements {
+  $bolt-all-custom-block-elements: append($bolt-all-custom-block-elements, unquote($bolt-custom-element-item), comma);
+}
+
+@each $bolt-custom-element-item in $_bolt-custom-inline-block-elements {
+  $bolt-all-custom-inline-block-elements: append($bolt-all-custom-inline-block-elements, unquote($bolt-custom-element-item), comma) !global;
+}
+
+@each $bolt-custom-element-item in $_bolt-custom-inline-elements {
+  $bolt-all-custom-inline-elements: append($bolt-all-custom-inline-elements, unquote($bolt-custom-element-item), comma) !global;
+}
+
+
+// Example of adding global generic styles to all custom elements.
+@if length($bolt-all-custom-block-elements) > 0 {
+  #{$bolt-all-custom-block-elements} {
+    display: block;
+  }
+}
+
+@if length($bolt-all-custom-inline-block-elements) > 0 {
+  #{$bolt-all-custom-inline-block-elements} {
+    display: inline-block;
+    display: inline-flex;
+  }
+}
+
+@if length($bolt-all-custom-inline-elements) > 0 {
+  #{$bolt-all-custom-inline-elements} {
+    display: inline;
+  }
+}
+
+
+
 
 
 // // color map
@@ -125,18 +148,18 @@ bolt-demo {
 //     $nest-map: map-get($map, $nest-map-name);
 //     // get the var value fro mthe nested map
 //     $var-fall: map-get($nest-map, $var);
-//     $var-output: var(--#{$nest-name}-#{$nest-map-name}-#{$var});    
+//     $var-output: var(--#{$nest-name}-#{$nest-map-name}-#{$var});
 //   } @else {
 //     // get the map from map name
 //     $map: map-get($var-maps, $map-name);
 //     // fallback, grab the variable's value from the map
 //     $var-fall: map-get($map, $var);
-//     $var-output: var(--bolt-#{$map-name}#{$var});    
+//     $var-output: var(--bolt-#{$map-name}#{$var});
 //   }
 //   // if show standard is not overridden to be null
 //   @if $show-fall {
 //     #{$prop}: $var-fall;
-//   }      
+//   }
 //   // css4 variable output
 //   #{$prop}: $var-output;
 // }
@@ -176,10 +199,10 @@ bolt-demo {
 //   @include bolt-var(background-color, bolt-color(teal));
 
 //   // color it red if no CSS4 variables
-//   color: red; 
+//   color: red;
 //   // override "show standard" with "null" which means no CSS4 support will still be red
 //   // if we didn't do this, it would create the fallback.
-//   // @include v(color, text, null); 
+//   // @include v(color, text, null);
 // }
 
 // // h1, h2, h3, h4 {
