WIP: action block items

--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks__item.twig
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks__item.twig
@@ -21,7 +21,7 @@
 
 
 
-<li class="c-action-block__item">
+{# <li class="c-action-block__item">
   <a href="{{ item.action_block.url }}" class="o-block o-block--center c-action-block">
 
     {% if item.icon.name %}
@@ -45,7 +45,7 @@
     {% endif %}
   </a>
 </li>
-
+ #}
 
 {# Notes
 action_block: // paragraph type
