WIP: action blocks spacing

--- a/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
+++ b/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
@@ -30,6 +30,8 @@ $bolt-border-radius: 3px;
 
 // Transition
 $bolt-transition: ease-in-out 200ms;
+$bolt-transition-ease: ease-in-out;
+$bolt-transition-timing: 200ms;
 
 // Effects
 $bolt-translate-none: translate3d(0, 0, 0);
