--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -1,23 +1,35 @@
-// Placeholder for Action Block Styles
+$bolt-action-blocks-border-width: $bolt-border-width;
+$bolt-action-blocks-border-style: $bolt-border-style;
+$bolt-action-blocks-border-color: rgba(bolt-color(gray), 0.2);
+$bolt-action-blocks-transition-ease: $bolt-transition-ease;
+$bolt-action-blocks-transition-timing: 300ms;
 
+bolt-action-blocks {
+  display: block; // TODO: This needs to use the global block element mixin.
+  overflow: hidden;
+}
 
 .c-bolt-action-blocks {
-  @include bolt-margin(0);
+  @include bolt-margin(0 -1px -1px 0);
   @include bolt-padding(0);
 
   display: flex;
   flex-wrap: wrap;
   list-style: none;
-  overflow: hidden;
 }
 
 .c-bolt-action-blocks__item {
   display: block;
-  flex: 1 0 calc(100% / 12 - 1px);
+  flex: 1 0 calc(100% / 6 - 1px);
   position: relative;
-  min-width: 200px;
+  min-width: 150px;
   color: var(--bolt-color-text);
-  text-align: center;
+  border-bottom-width: $bolt-action-blocks-border-width;
+  border-bottom-style: $bolt-action-blocks-border-style;
+  border-bottom-color: $bolt-action-blocks-border-color;
+  border-right-width: $bolt-action-blocks-border-width;
+  border-right-style: $bolt-action-blocks-border-style;
+  border-right-color: $bolt-action-blocks-border-color;
 
   &:before {
     display: block;
@@ -28,20 +40,9 @@
     height: 100%;
     content: '';
     pointer-events: none;
-    background-color: bolt-color(gray);
+    background-color: bolt-color(indigo, xlight);
     opacity: 0;
-  }
-
-  &:after {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: -1px;
-    width: 1px;
-    height: 100%;
-    content: '';
-    background-color: bolt-color(gray);
-    opacity: 0.15;
+    transition: all $bolt-action-blocks-transition-ease $bolt-action-blocks-transition-timing;
   }
 
   &:hover, &:focus {
@@ -51,45 +52,114 @@
   }
 }
 
+.c-bolt-action-blocks--borderless {
+  .c-bolt-action-blocks__item {
+    border-bottom-color: transparent;
+    border-right-color: transparent;
+  }
+}
+
+.c-bolt-action-blocks--max-2 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 2 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-3 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 3 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-4 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 4 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-5 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 5 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-6 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 6 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-7 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 7 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-8 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 8 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-9 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 9 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-10 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 10 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-11 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 11 - 1px);
+  }
+}
+
+.c-bolt-action-blocks--max-12 {
+  .c-bolt-action-blocks__item {
+    flex: 1 0 calc(100% / 12 - 1px);
+  }
+}
+
 .c-bolt-action-block {
   @include bolt-padding(medium, stretched);
 
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 
 .c-bolt-action-block__item {
   @include bolt-margin(0 auto small auto);
   @include bolt-font-size(xsmall);
+  @include bolt-font-weight(bold);
 
   display: block;
   width: 100%;
   max-width: 20ch;
+  color: var(--bolt-color-heading, bolt-color(indigo));
+  text-align: center;
 
   &:last-child {
     @include bolt-margin-bottom(0);
   }
 }
 
-.c-bolt-action-block__item-media {
-}
+.c-bolt-action-block--align-items-center {
+  .c-bolt-action-block__item {
+    &:first-child {
+      @include bolt-margin-top(auto);
+    }
 
-.c-bolt-action-block__item-media--circle {
-  position: relative;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 100em;
-  background-color: bolt-color(black);
-
-  > * {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate3d(-50%, -50%, 0);
+    &:last-child {
+      @include bolt-margin-bottom(auto);
+    }
   }
-}
-
-.c-bolt-action-block__item-text {
-  @include bolt-font-weight(bold);
-
-  color: var(--bolt-color-text);
 }
