--- a/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
+++ b/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
@@ -26,6 +26,7 @@ $bolt-shadow--large: 0 0.35rem 0.6rem rgba($bolt-shadow-color, 0.18);
 // Border
 $bolt-border-width: 1px;
 $bolt-border-style: solid;
+$bolt-border-color: rgba(bolt-color(gray), 0.2);
 $bolt-border-radius: 3px;
 
 // Transition
