feat: updating global icon styles + swapping out CDN shim as a temp workaround till build updated

--- a/src/_patterns/01-core/03-generic/generic-font-stacks/_generic.font-stacks.scss
+++ b/src/_patterns/01-core/03-generic/generic-font-stacks/_generic.font-stacks.scss
@@ -20,7 +20,7 @@
 @include bolt-font-face('Open Sans', '/fonts/opensans-italic', 400, italic);
 
 
-@include bolt-font-face('Open Sans', '/fonts/opensans-bold', 700);
+@include bolt-font-face('Open Sans', '/fonts/opensans-semibold', 600);
 // @include bolt-font-face('Open Sans', '/fonts/opensans-bolditalic', 700, italic);
 
 
