--- a/src/_patterns/02-components/bolt-headline/src/_typography.twig
+++ b/src/_patterns/02-components/bolt-headline/src/_typography.twig
@@ -59,6 +59,12 @@
       {{ text }}
     {% endif %}
   </span>
+
+  {% if icon %}
+    <span class="{{ "#{baseClass}__icon" }}">
+      {% include "@bolt/icon.twig" with icon only %}
+    </span>
+  {% endif %}
 </{{ tag }}>
 
 
