--- a/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
+++ b/src/_patterns/02-components/bolt-headline/src/all-headlines.scss
@@ -91,21 +91,20 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
 
 // Headline content
 
-.c-bolt-headline__text {
-  ~ .c-bolt-headline__icon {
-    @include bolt-margin-left(small);
-  }
-}
+// .c-bolt-headline__text {
+//   ~ .c-bolt-headline__icon {
+//     @include bolt-margin-left(small);
+//   }
+// }
 
 .c-bolt-headline__icon {
-  width: 0.75em;
-  height: 0.75em;
+ 
 
-  svg {
-    width: 1em;
-    height: auto;
-    fill: currentColor;
-  }
+  // svg {
+  //   width: 1em;
+  //   height: auto;
+  //   fill: currentColor;
+  // }
 
   ~ .c-bolt-headline__text {
     @include bolt-margin-left(small);
