--- a/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
+++ b/src/_patterns/04-pages/d8-homepage/d8-homepage.twig
@@ -14,7 +14,10 @@
             {
               "pattern": "headline",
               "text": "Personalized. Not Creepy.",
-              "size": "large"
+              "size": "large",
+              "icon": {
+                "name": "chevron-right"
+              }
             }
           ]
         },
@@ -27,7 +30,10 @@
             {
               "pattern": "headline",
               "text": "Create Sales Superstars",
-              "size": "large"
+              "size": "large",
+              "icon": {
+                "name": "chevron-right"
+              }
             }
           ]
         },
@@ -40,7 +46,10 @@
             {
               "pattern": "headline",
               "text": "Stop Coding. Start Designing.",
-              "size": "large"
+              "size": "large",
+              "icon": {
+                "name": "chevron-right"
+              }
             }
           ]
         }
