--- a/src/_patterns/02-components/bolt-icon/src/Icon.scss
+++ b/src/_patterns/02-components/bolt-icon/src/Icon.scss
@@ -11,24 +11,23 @@ bolt-icon {
   display: inline-block;
   color: currentColor;
   color: var(--bolt-color-icon, currentColor);
+  vertical-align: middle;
 }
 
 
 // By default, icons should inherit the size of the container it's put inside
 .c-bolt-icon {
+  position: relative;
   width: 1em;
   height: 1em;
+  vertical-align: middle;
+  box-sizing: border-box;
 }
 
-
-.c-bolt-icon--xsmall {
-  width: 12px;
-  height: 12px;
-}
 
 .c-bolt-icon--small {
-  width: 16px;
-  height: 16px;
+  width: 12px;
+  height: 12px;
 }
 
 .c-bolt-icon--medium {
@@ -44,4 +43,35 @@ bolt-icon {
 .c-bolt-icon--xlarge {
   width: 64px;
   height: 64px;
+  padding: 16px;
 }
+
+
+// By default background is transparent;
+.c-bolt-icon--background {
+  opacity: 0;
+}
+
+.c-bolt-icon--has-circle-background .c-bolt-icon--circle-background {
+  opacity: 0.5;
+  opacity: var(--bolt-theme-icon-background-opacity, 0.5);
+
+  fill: currentColor;
+  fill: var(--bolt-theme-icon-background-color, currentColor);
+}
+
+
+
+
+// .c-bolt-icon--circle-background:before {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   opacity: 0.25;
+//   border-radius: 50%;
+//   content: '';
+//   width: 100%;
+//   height: 100%;
+// }
+
+
