fix: action blocks code revision

--- a/src/_patterns/02-components/bolt-action-blocks/src/action-block.twig
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-block.twig
@@ -1,8 +1,12 @@
 {# Sample Usage
   {% include "@bolt/action-block.twig" with {
-    icon: "icon-name",
-    text: "Block Text",
-    url: "http://google.com"
+    text: "Title",
+    url: "http://google.com",
+    icon: {
+      name: "icon-name",
+      size: "large",
+      background: "circle"
+    }
   } only %}
 #}
 
