--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -1,6 +1,39 @@
+@import '@bolt/settings-global';
+@import '@bolt/settings-spacing';
+@import '@bolt/settings-colors';
+@import '@bolt/settings-font-size';
+@import '@bolt/settings-font-weight';
+@import '@bolt/tools-font-size';
+@import '@bolt/tools-font-weight';
+@import '@bolt/tools-spacing';
+@import '@bolt/tools-color-palette';
+
+
+
+
 /* ------------------------------------ *\
    Action Blocks
 \* ------------------------------------ */
+
+// Sample Usage
+// <bolt-action-blocks bolt-component>
+//   <ul class="c-bolt-action-blocks c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--vertical-align-start c-bolt-action-blocks--bordered">
+//     <li class="c-bolt-action-blocks__item">
+//       <bolt-action-block bolt-component>
+//         <a href="http://google.com" class="c-bolt-action-block">
+//           <div class="c-bolt-action-block__item">
+//             <bolt-icon name="download" background="circle" size="large"></bolt-icon>
+//           </div>
+//           <div class="c-bolt-action-block__item">
+//             Item 1, Proin Quis Tortor Orci Etiam At Risus Et Justo Dignissim.
+//           </div>
+//         </a>
+//       </bolt-action-block>
+//     </li>
+//   </ul>
+// </bolt-action-blocks>
+
+
 
 $bolt-action-block-text-color: var(--bolt-color-heading, bolt-color(indigo));
 $bolt-action-block-transition-ease: $bolt-transition-ease;
