--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.twig
@@ -1,8 +1,8 @@
 {# Sample Usage
   {% include "@bolt/action-blocks.twig" with {
-    itemsPerRow: 3,                 // Optional [2 ~ 12]. Default is 3.
-    verticalAlignment: "top",       // Optional [top, center, bottom]. Default is top.
-    border: "show",                 // Optional [show, hide]. Default shows borders, but you can turn them off.
+    maxItemsPerRow: 3,  // Optional [2 ~ 12]. Default is 3.
+    align: "top",       // Optional [top, center, bottom]. Default is top.
+    border: true,       // Optional [show, hide]. Default shows borders, but you can turn them off.
     contentItems: [
       {
         text: "Item 1",
@@ -38,15 +38,14 @@
 
 {% set prefix = "c-bolt-" %}
 
-{% set verticalAlignments = {
+{% set minItems = 2 %}
+{% set maxItems = 12 %}
+{% set defaultItems = 6 %}
+
+{% set alignments = {
   "top": "start",
   "center": "center",
   "bottom": "end"
-} %}
-
-{% set borderOptions = {
-  "show": "bordered",
-  "hide": "borderless"
 } %}
 
 {% set attributes = create_attribute(attributes|default({})) %}
@@ -56,16 +55,16 @@
 {% set baseClass = prefix ~ componentName %}
 {% set componentItemName = "action-block" %}
 {% set itemClass = prefix ~ componentItemName %}
-{% set itemsPerRow = itemsPerRow | default(3) %}
-{% set verticalAlignment = verticalAlignment | default("top") %}
-{% set border = border | default("show") %}
+{% set maxItemsPerRow = maxItemsPerRow >= minItems and maxItemsPerRow <= maxItems ? maxItemsPerRow : defaultItems %}
+{% set align = align | default("top") %}
+{% set border = border == false and border is not null ? "false" : "true" %}
 
 
 {% set classes = [
   baseClass,
-  itemsPerRow ? baseClass ~ "--item-max-" ~ itemsPerRow : "",
-  verticalAlignment in verticalAlignments|keys ? baseClass ~ "--vertical-align-" ~ verticalAlignments[verticalAlignment],
-  border in borderOptions|keys ? baseClass ~ "--" ~ borderOptions[border]
+  maxItemsPerRow ? baseClass ~ "--item-max-" ~ maxItemsPerRow : "",
+  align in alignments|keys ? baseClass ~ "--vertical-align-" ~ alignments[align],
+  border == "true" ? baseClass ~ "--bordered" : baseClass ~ "--borderless"
 ] %}
 
 
