--- a/src/_includes/meta/_01-foot.twig
+++ b/src/_includes/meta/_01-foot.twig
@@ -3,6 +3,6 @@
   {{ patternLabFoot | raw }}
 
     {# <script src="/scripts/bolt-app.min.js" async type="module"></script> #}
-    <script src="/scripts/bolt-app.min.js" defer></script>
+    <script src="/scripts/bolt-icon.min.js" async></script>
   </body>
 </html>
