docs: code clean up and documentation

--- a/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
+++ b/src/_patterns/01-core/01-settings/settings-global/_settings.global.scss
@@ -26,10 +26,13 @@ $bolt-shadow--large: 0 0.35rem 0.6rem rgba($bolt-shadow-color, 0.18);
 // Border
 $bolt-border-width: 1px;
 $bolt-border-style: solid;
+$bolt-border-color: rgba(bolt-color(gray), 0.2);
 $bolt-border-radius: 3px;
 
 // Transition
 $bolt-transition: ease-in-out 200ms;
+$bolt-transition-ease: ease-in-out;
+$bolt-transition-timing: 200ms;
 
 // Effects
 $bolt-translate-none: translate3d(0, 0, 0);
