--- a/src/_patterns/01-core/03-generic/generic-reset/_generic.reset.scss
+++ b/src/_patterns/01-core/03-generic/generic-reset/_generic.reset.scss
@@ -7,7 +7,7 @@
 
 
 /* stylelint-disable-next-line color-no-hex */
-$bolt-color-selection-background-color: #b3d4fc;
+$bolt-color-selection-background-color: bolt-color(indigo, xlight);
 
 
 /* stylelint-disable selector-list-comma-newline-after */
