--- a/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
+++ b/src/_patterns/02-components/bolt-blockquote/src/blockquote.scss
@@ -1,17 +1,53 @@
-/* ------------------------------------ *\
-   Blockquote
-\* ------------------------------------ */
-
 @import '@bolt/settings-global';
 @import '@bolt/settings-colors';
 @import '@bolt/tools-spacing';
 @import '@bolt/tools-color-palette';
 
+
+
+
+/* ------------------------------------ *\
+   Blockquote
+\* ------------------------------------ */
+
+// Sample Usage
+// <bolt-blockquote bolt-component>
+//   <blockquote class="c-bolt-blockquote">
+//     <div class="c-bolt-blockquote__quote">
+//       <div class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--large">
+//         <span class="c-bolt-text__text">
+//           <p>Quote Text.</p>
+//         </span>
+//       </div>
+//     </div>
+//     <footer class="c-bolt-blockquote__footer">
+//       <div class="c-bolt-blockquote__footer-item">
+//         <cite class="c-bolt-text c-bolt-text--semibold c-bolt-text--normal c-bolt-text--xsmall">
+//           <span class="c-bolt-text__text">
+//             Author Name
+//           </span>
+//         </cite>
+//       </div>
+//       <div class="c-bolt-blockquote__footer-item">
+//         <em class="c-bolt-text c-bolt-text--regular c-bolt-text--italic c-bolt-text--xsmall">
+//           <span class="c-bolt-text__text">
+//             Author Title
+//           </span>
+//         </em>
+//       </div>
+//     </footer>
+//   </blockquote>
+// </bolt-blockquote>
+
+
+// Local Variables
 $bolt-blockquote-border-width: 0.25rem;
 $bolt-blockquote-border-style: $bolt-border-style;
 $bolt-blockquote-border-color: bolt-color(teal);
 $bolt-blockquote-footer-line-height: $bolt-line-height--tight;
 
+
+// Styles
 .c-bolt-blockquote {
   @include bolt-padding(0 medium);
 
