--- a/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
+++ b/src/_patterns/02-components/bolt-action-blocks/src/action-blocks.scss
@@ -34,7 +34,7 @@
 // </bolt-action-blocks>
 
 
-
+// Local Variables
 $bolt-action-block-text-color: var(--bolt-color-heading, bolt-color(indigo));
 $bolt-action-block-transition-ease: $bolt-transition-ease;
 $bolt-action-block-transition-timing: 300ms;
@@ -43,7 +43,6 @@ $bolt-action-block-item-max-width: 20ch;
 $bolt-action-blocks-border-width: $bolt-border-width;
 $bolt-action-blocks-border-style: $bolt-border-style;
 $bolt-action-blocks-border-color: $bolt-border-color;
-
 
 
 // Individual Action Block Styles
